# alt-nfp

./: .env.example  .gitignore  404.html  ARCHITECTURE.md  CLAUDE.md  Port and Extend Plan for the JAX NFP Nowcasting Model.md  README.md  Staged Progression to a Bayesian State Space NFP Nowcasting Model.md  conftest.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml
architecture/boundaries-and-paths/: index.html
architecture/package-chain/: index.html
architecture/storage-contract/: index.html
cli-reference/: index.html
concepts/additive/government-wedge/: index.html
concepts/additive/overview/: index.html
concepts/additive/private-state-space/: index.html
concepts/vintages-and-censoring/: index.html
docs/: cli-reference.md  government_design.md  index.md
docs/architecture/: boundaries-and-paths.md  package-chain.md  storage-contract.md
docs/concepts/: vintages-and-censoring.md
docs/get-started/: data-story.md  installation.md  quickstart.md
get-started/data-story/: index.html
get-started/installation/: index.html
get-started/quickstart/: index.html
plans/: 0-port_and_staged_plan.md  1-architecture_review.md  10-store_rebuild.md  11-model_data_dropin.md  12-goldens_rebaseline.md  13-tier01-scoreboard-and-diagnostics.md  14-government_wedge.md  2-s3_vintage_store.md  3-golden_masters.md  4-a2_seams_snapshots.md  5-a3_model_parity.md  6-a4_vmap_backtests.md  7-a5_real_competitors.md  8-audit_remediation.md  9-audit_independent.md
reference/: index.html
reference/SUMMARY/: index.html
reference/nfp_download/: index.html
reference/nfp_ingest/: index.html
reference/nfp_lookups/: index.html
reference/nfp_model/: index.html
reference/nfp_vintages/: index.html
references/: ces.md  qcew.md
scripts/: _t8_promote.py  _wedge_diag.py  bootstrap_store.py  gen_api_pages.py  generate_a2_golden.py  generate_a3_reference.py  generate_golden_masters.py  mirror_store.py  patch_ces_alfred.py  regen_golden_rebuild.py  run_a3_parity.py  run_a4_backtest.py  run_a5_backtest.py  run_tier1_diagnostics.py  seed_data_s3.py  stage_goldens_rebuild.py
search/: search_index.json
specs/: a5_real_competitors.md  alfred_ces_vintages.md  audit_alt_nfp.md  audit_independent.md  audit_nfp_ingest.md  audit_nfp_model.md  audit_nfp_vintages.md  bloomberg_consensus.md  ces_growth_convention.md  ces_qcew_industry.md  cli_production_workflow.md  documentation_site.md  government_wedge.md  model_improvements.md  model_releases.md  model_research.md  port_to_bloomberg.md  provider_microdata_spec.md  psp_composition_todo.md  psp_gross_flows_todo.md  size_classes.md  store_audit_findings.md  store_rebuild.md  store_rebuild_acquire.md  tech_debt_spec.md
specs/completed/: alt-nfp-methods-review.md  alt-nfp-model-methodology.md  audit_independent.md  audit_nfp_lookup.md  bloomberg_consensus.md  cli_production_workflow.md  documentation_site.md  store_rebuild_model_data_dropin.md
specs/plans/: 0-port_and_staged_plan.md  15-container_safe_storage.md  16-cli_production_workflow.md  17-documentation_site.md  18-consensus_eval_upgrade.md  19-alfred_ces_frontier_patch.md  5-a3_model_parity.md  8-audit_remediation.md  9-audit_independent.md
(+85 files in other folders)
